# simple-rag

./: .gitattributes  Dockerfile  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_rag.py  template.py
.github/workflows/: main.yml
components/: .env  embede_model.py  llm_chain.py  load_pdf.py  retrieval.py  split_docs.py  vector_store.py
